# question_and_answer

./: .dockerignore  Cargo.toml  Dockerfile  build.rs  log4rs.yaml  logs.txt
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: main.rs
migrations/: 20230815204500_questions_table.up.sql  20230815210835_answers_table.up.sql  20230822223424_create_accounts_table.up.sql
mock-server/src/: lib.rs
src/: config.rs  lib.rs  main.rs  profanity.rs  store.rs
src/routes/: answer.rs  authentication.rs  question.rs
src/types/: account.rs  answer.rs  pagination.rs  question.rs
